--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@google/generative-ai": "^0.1.0",
     "@langchain/core": "^0.1.11",
     "@langchain/google-genai": "^0.0.7",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "base64-js": "^1.5.1",
     "markdown-it": "^13.0.2"
   },
