--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "base64-js": "^1.5.1",
+    "dotenv": "^16.5.0",
     "markdown-it": "^13.0.2"
   },
   "devDependencies": {
